[gd_scene load_steps=5 format=3 uid="uid://b1hpofj2vfsv3"]

[ext_resource type="Texture2D" uid="uid://g81purq02agu" path="res://sprites/particles/sun/sun_center.png" id="1_5hcwh"]
[ext_resource type="Script" uid="uid://dvnqm4oos1d6p" path="res://scripts/game_world/sun/sun_node.gd" id="1_t38dk"]
[ext_resource type="Texture2D" uid="uid://c70ll0drf1opl" path="res://sprites/particles/sun/sun_ring.png" id="2_t38dk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5hcwh"]
radius = 13.0

[node name="Sun_Node" type="Node2D"]
script = ExtResource("1_t38dk")

[node name="Sprite" type="Node2D" parent="."]

[node name="Center" type="Sprite2D" parent="Sprite"]
texture = ExtResource("1_5hcwh")

[node name="Ring" type="Sprite2D" parent="Sprite/Center"]
show_behind_parent = true
texture = ExtResource("2_t38dk")

[node name="Mouse_Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitorable = false

[node name="Collision_Shape" type="CollisionShape2D" parent="Mouse_Area"]
shape = SubResource("CircleShape2D_5hcwh")

[node name="Despawn_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="Mouse_Area" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="timeout" from="Despawn_Timer" to="." method="_on_despawn_timer_timeout"]
